js hide/show nav

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,12 @@
       </div>
     </section>
 
-    <section class="gallery" id="gallery"></section>
+    <section class="gallery" id="gallery">
+      <div class="container container-gallery">
+        <h2>Jak to u nás vypadá</h2>
+        <p class="gallery-intro">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus officiis quaerat repellat laborum magni quam ipsam? Facilis distinctio magnam aliquid obcaecati in laudantium quia dolorem. Eligendi ab minus culpa omnis.</p>
+    </div>
+    </section>
 
     <section>
       <div class="container">
