--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
               </div>
               <div class="drink__info">
                 <h3>Cappuccino</h3>
-                <div class="layer">
+                <!--<div class="layer">
                   <div
                     class="layer__color"
                     style="background-color: #feeeca"
@@ -68,7 +68,7 @@
                     style="background-color: #613916"
                   ></div>
                   <div class="layer__label">espresso</div>
-                </div>
+                </div>-->
               </div>
             </div>
             <div class="drink__controls">
