--- a/src/index.html
+++ b/src/index.html
@@ -40,14 +40,14 @@
         </p>
 
         <div class="drinks-list">
-          <div class="drink">
+          <!--<div class="drink">
             <div class="drink__product">
               <div class="drink__cup">
                 <img src="https://apps.kodim.cz/daweb/cafelora/assets/cups/cappuccino.png" />
               </div>
               <div class="drink__info">
                 <h3>Cappuccino</h3>
-                <!--<div class="layer">
+                <div class="layer">
                   <div
                     class="layer__color"
                     style="background-color: #feeeca"
@@ -68,13 +68,13 @@
                     style="background-color: #613916"
                   ></div>
                   <div class="layer__label">espresso</div>
-                </div>-->
+                </div>
               </div>
             </div>
             <div class="drink__controls">
               <button class="order-btn">Objednat</button>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </section>
